--- a/frontend/natiart-app/src/app/components/customer/customer-dashboard/customer-dashboard.component.html
+++ b/frontend/natiart-app/src/app/components/customer/customer-dashboard/customer-dashboard.component.html
@@ -1,1 +1,7 @@
-<p>customer-dashboard works!</p>
+<app-top-menu></app-top-menu>
+<div class="flex">
+  <app-left-menu class="w-64"></app-left-menu>
+  <main class="flex-grow">
+    <!-- Main content components go here -->
+  </main>
+</div>
