initiate tailwindcss styling config

--- a/frontend/natiart-app/src/app/app.component.html
+++ b/frontend/natiart-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="bg-[#FDF5E6] min-h-screen font-serif text-[#4A4A4A]">
+<div class="bg-background min-h-screen font-serif text-secondary">
 
 <router-outlet></router-outlet>
 <app-footer></app-footer>
