--- a/frontend/natiart-app/src/app/components/customer/shipping-estimation/shipping-estimation.component.html
+++ b/frontend/natiart-app/src/app/components/customer/shipping-estimation/shipping-estimation.component.html
@@ -9,7 +9,7 @@
         id="cep"
         formControlName="cep"
         cepFormat
-        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-input focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50"
         placeholder="00000-000"
         aria-describedby="cep-error"
       >
