--- a/frontend/natiart-app/src/app/components/customer/cart/cart.component.html
+++ b/frontend/natiart-app/src/app/components/customer/cart/cart.component.html
@@ -45,7 +45,7 @@
             </td>
             <td class="py-4 flex items-center justify-between md:table-cell md:text-center">
               <span class="font-bold md:hidden">Actions:</span>
-              <button (click)="confirmRemoveItem(item)" aria-label="Remove item" class="text-red-500 hover:text-red-700 p-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-red-500">
+              <button (click)="confirmRemoveItem(item)" aria-label="Remove item" class="text-error hover:text-red-700 p-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-error">
                 <svg class="h-5 w-5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
               </button>
             </td>
@@ -57,7 +57,7 @@
 
     <div class="flex flex-col md:flex-row justify-between items-center mb-8">
       <p class="text-2xl font-semibold text-gray-800 mb-4 md:mb-0">Total: {{ cartTotal$ | async | currency:'BRL' }}</p>
-      <button (click)="confirmClearCart()" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 transition-colors focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">Clear Cart</button>
+      <button (click)="confirmClearCart()" class="bg-error text-white px-4 py-2 rounded hover:bg-red-600 transition-colors focus:outline-none focus:ring-2 focus:ring-error focus:ring-offset-2">Clear Cart</button>
     </div>
 
     <div class="flex flex-col md:flex-row justify-between items-center mt-8">
